osci-ai-website-align-fixing

--- a/index.css
+++ b/index.css
@@ -2478,7 +2478,7 @@ body {
   .white-bg {
     position: relative;
     background-color: #fff;
-    height: 200vh;
+    height: 190vh;
     margin-top: -48rem;
   }
   .wht-bg-h1-div {
